--- a/app/src/main/res/layout/menu_app_bar_top_layout.xml
+++ b/app/src/main/res/layout/menu_app_bar_top_layout.xml
@@ -14,11 +14,9 @@
             android:id="@+id/idtoolBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/menu"
+            app:menu="@menu/menu_top"
             app:navigationIcon="@drawable/ic_baseline_arrow_back"
-            app:title="Lanches"
-
-            />
+            app:title="Lanches" />
 
 
     </com.google.android.material.appbar.AppBarLayout>
