--- a/app/src/main/res/layout/menu_bar_buttom_layout.xml
+++ b/app/src/main/res/layout/menu_bar_buttom_layout.xml
@@ -14,7 +14,19 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         app:menu="@menu/menu_top"
-        app:navigationIcon="@drawable/ic_baseline_menu" />
+        app:navigationIcon="@drawable/ic_baseline_menu"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/idFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_baseline_add"
+        app:layout_anchor="@id/idBottomAppBar"
+
+        />
+
+
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
